[package]
authors = ["Andreas Heider <andreas@heider.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "svd2rust crate for STM32L151"
keywords = ["arm", "cortex-m", "stm32", "svd2rust"]
license = "MIT OR Apache-2.0"
name = "stm32l151"
repository = "https://github.com/ah-/stm32l151"
version = "0.2.2"

[dependencies]
bare-metal = "0.1.1"
cortex-m = "0.4.3"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.4"

[features]
rt = ["cortex-m-rt"]
